--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -44,15 +44,15 @@
             <span>{{testviewCtrl.lstselectedcustomer.Name}}</span>
         </div>
 
-        <!--<div class="col-lg-2">
+        <div class="col-lg-2">
             <vr-dropdown datasource="testviewCtrl.customers" selectedvalues="testviewCtrl.selectedCustomers" datatextfield="Name" datavaluefield="CarrierAccountID" entityname="Supplier"></vr-dropdown>
-        </div>-->
+        </div>
 
     </div>
     <div class="row">
         <div class="col-lg-2">
-            <!--<vr-dropdown type="menu" datasource="testviewCtrl.routes" datatextfield="name" datavaluefield="value"
-                         entityname="Route" onselectionchange="testviewCtrl.selectedRoutes" lastselectedvalue="testviewCtrl.lstselectedroute"></vr-dropdown>--> <!--   -->
+            <vr-dropdown type="menu" datasource="testviewCtrl.routes" datatextfield="name" datavaluefield="value"
+                         entityname="Route" onselectionchange="testviewCtrl.selectedRoutes" lastselectedvalue="testviewCtrl.lstselectedroute"></vr-dropdown> 
         </div>
         <div class="col-lg-2">
             <span>Last Selected Value : </span>
