--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-multiple.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-multiple.html
@@ -13,10 +13,10 @@
                     </div>
                 </div>
                 <div style="height: 225px; overflow: auto; margin-top: 5px">
-                    <div class="mark-select " ng-click="selectValue($event, c); " ng-repeat="c in ctrl.getDatasource() | filter:ctrl.filtername"
+                    <div class="mark-select " ng-click="selectValue($event, c); " ng-repeat="c in ctrl.datasource | filter:ctrl.filtername"
                          style="display: block; padding: 3px 2px 0px 2px; margin: 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
                         <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
-                        <div style="float:right" ng-show="ctrl.selectedvalues.indexOf(c) > -1">✔</div>
+                        <div style="float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
                     </div>
                 </div>
             </div>
