--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
@@ -18,7 +18,7 @@
                 <div style="height: 225px; overflow: auto; margin-top: 5px">
                     <div class="mark-select " ng-click="selectValue($event, c); "
                          ng-attr-title="{{ctrl.getObjectText(c)}}"
-                         ng-repeat="c in ctrl.datasource"
+                         ng-repeat="c in ctrl.options.datasource"
                          style="display:block;padding:3px 2px 0px 2px; margin:2px; white-space:normal;"
                          ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
                         <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
