Fix Display Text
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21895

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-lg-2">
             <span>Last Customer Selected Value : </span>
-            <span>{{testviewCtrl.options.lstselectedcustomer.Name}}</span>
+            <span>{{testviewCtrl.options.lastselectedvalue.Name}}</span>
         </div>
 
         <div class="col-lg-2">
@@ -49,7 +49,7 @@
         </div>
         <div class="col-lg-2">
             <span> Selected Customer Value : </span>
-            <span ng-repeat="c in testviewCtrl.options.selectedCustomers">{{c.Name}}</span>
+            <span ng-repeat="c in testviewCtrl.options.selectedvalues">{{c.Name}}</span>
         </div>
     </div>
     <div class="row">
