integration of directives
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21898

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate2.html
@@ -16,8 +16,8 @@
     </div>
     <div class="col-lg-2  style-col">
 
-        <vr-dropdown type="multiple" datasource="customers" datatextfield="Name" datavaluefield="CarrierAccountID"
-                     entityname="Customers" selectedvalues="selectedCustomers"></vr-dropdown>
+        <vr-dropdown type="multiple" options="optionsCustomers" datatextfield="Name" datavaluefield="CarrierAccountID"
+                     entityname="Customers"></vr-dropdown>
 
     </div>
 </div>
