--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate2.html
@@ -14,53 +14,10 @@
             </ul>
         </div>
     </div>
-    <div class="col-lg-2  style-col">
-        <vr-dropdown limitcharactercount="2" type="ondemand" datasource="zones" datatextfield="Name" datavaluefield="ZoneId"
-                     onsearch="searchZones" entityname="Zones" selectedvalues="selectedZones"></vr-dropdown>
-
-        <!--<div class="dropdown" id="dropdownZones">
-            <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenuZ" data-toggle="dropdown" aria-expanded="true">
-                <span style="float:left;margin:0px"> {{getSelectZoneText()}}</span>
-                <span style="position:absolute;top:15px;right:5px" class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuZ" ng-class="selectedZones.length == 0 ? 'single-col-checklist':'double-col-checklist' ">
-                <li role="presentation" ng-click="muteAction($event)">
-                    <div style="display: inline-block; width: 220px;">
-                        <div style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; ">
-                            <div class="inner-addon right-addon">
-                                <i class="glyphicon icon-loader" ng-show="showloading"></i>
-                                <input class="form-control input-sm" type="text" placeholder="Type 2 characters.." ng-model="filterzone" ng-keyup="searchZones()">
-                            </div>
-                        </div>
-                        <div ng-show="filterzone.length < 2">Please type {{2 - filterzone.length}} character(s)..</div>
-                        <div ng-show="showloading">Loading..</div>
-                        <div style="height: 225px; overflow: auto; margin-top: 5px">
-                            <div class="mark-select " ng-click="selectZone($event, c)" ng-attr-title="{{c.Name}}" ng-repeat="c in zones" style="display: block;padding:3px 2px 0px 2px; margin:2px; white-space: normal;" ng-class="findExsite(selectedZones, c.ZoneId, 'ZoneId') > -1 ?'selected':'' ">
-                                <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{c.Name}}</div>
-                                <div style="display:inline-block;float:right" ng-show="findExsite(selectedZones, c.ZoneId, 'ZoneId') > -1 ">✔</div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; height: 260px; overflow: auto; white-space:normal" ng-show="selectedZones.length > 0">
-                        <div style="padding:5px ;">
-                            Selected Zones:
-                            <a href="" class="link" style="position: absolute; right: 5px;" ng-click="muteAction($event);selectedZones.length = 0">
-                                Clear all
-                                <i class="glyphicon glyphicon-trash hand-cursor "></i>
-                            </a>
-                        </div>
-                        <div style="height: 225px; overflow: auto;padding-top:5px">
-                            <span class="label custom-label" ng-repeat="obj in selectedZones">
-                                {{obj.Name}}
-                                <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="selectZone($event,obj)"></span>
-                            </span>
-                        </div>
-
-                    </div>
-                </li>
-            </ul>
-        </div>-->    
+    <div class="col-lg-2  style-col">       
+        <vr-dropdown type="ondemand" options="optionsZones" datatextfield="Name" datavaluefield="ZoneId"
+                     onsearch="searchZones" entityname="Zones" limitcharactercount="2"></vr-dropdown>
+   
     </div>
     <div class="col-lg-2  style-col">
         <label class="control-label" style="padding-top:6px">Excluded Codes</label>
