--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor2.html
@@ -28,36 +28,21 @@
                     <label class="control-label" style="padding-top:6px">Rule Type:</label>
                 </div>
                 <div class="col-lg-2 style-col">
-                    <vr-dropdown datasource="templates" datatextfield="name" datavaluefield="objectType"
-                                 entityname="" type="standard" lastselectedvalue="ruletype"></vr-dropdown>
+                    <vr-dropdown datatextfield="name" datavaluefield="objectType"
+                                 entityname="" type="standard" options="RouteRuleEditorController2.optionsRouteType"></vr-dropdown>
                 </div>
             </div>
             <div class="row style-row">
-                <vr-dropdown type="menu" datasource="RouteRuleEditorController2.routeTemplates" datatextfield="name" datavaluefield="name"
-                             onselectionchange="update2" lastselectedvalue="RouteRuleEditorController2.routetype"></vr-dropdown>
-                <div ng-include src="RouteRuleEditorController2.routetype.url">
+                <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
+                             onselectionchange="update2" options="RouteRuleEditorController2.optionsRuleType"></vr-dropdown>
+                <div ng-include src="RouteRuleEditorController2.optionsRuleType.lastselectedvalue.url">
                 </div> 
             </div>
-            <div class="row style-row">
-                <div style="position:relative">
-                    <div style="position:absolute;right:-10px;top:-16px;z-index:100">
-                        <div class="dropdown">
-                            <label id="dropdownMenuType" class="dropdown-toggle" style="padding-top:6px" data-toggle="dropdown" aria-expanded="true" ng-model='zonetype'>
-                                <label class="hand-cursor" style="display: inline-block; min-width: 100px; font-size: 12px; border-width: 0px 0px 1px 1px; border-style: solid; border-color: #F0F0F0; border-bottom-left-radius: 4px; padding: 5px; ">
-                                    By {{editortype.name}}<span style="float:right;top:8px;position:relative" class="caret"></span>
-                                </label>
-                            </label>
-                            <ul class="dropdown-menu dropdown-menu-custom menu-right" role="menu" aria-labelledby="dropdownZoneType" ng-mouseenter="muteaction($event);">
-                                <li role="presentation">
-                                    <div ng-repeat="e in editorTemplates" class="mark-select " ng-mouseenter="muteaction($event);" ng-click="update(e,'editortype')" style="display: block;padding:2px; margin:2px; white-space: normal;">
-                                        <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{e.name}}</div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div ng-include src="editortype.url">
+            <div class="row style-row">             
+                <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
+                             options="RouteRuleEditorController2.optionsEditorType"></vr-dropdown>
+
+                <div ng-include src=" RouteRuleEditorController2.optionsEditorType.lastselectedvalue.url">
                 </div>
             </div>
             <div class="row style-row">
@@ -82,11 +67,11 @@
             </div>
 
 
-            <div class="row style-row" ng-show="ruletype.name != 'Block Route' && ruletype.url!='' " style="min-height:200px">
+            <div class="row style-row" ng-show="RouteRuleEditorController2.optionsRouteType.lastselectedvalue.name != 'Block Route' && RouteRuleEditorController2.optionsRouteType.lastselectedvalue.url!='' " style="min-height:200px">
                 <div class="col-lg-12  style-col">
-                    <h4>{{ruletype.name}} Details:</h4>
+                    <h4>{{RouteRuleEditorController2.optionsRouteType.lastselectedvalue.name}} Details:</h4>
                 </div>
-                <div ng-include src="ruletype.url">
+                <div ng-include src="RouteRuleEditorController2.optionsRouteType.lastselectedvalue.url">
 
                 </div>
             </div>
