--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -24,13 +24,15 @@
     <a href="#/HighChartSparkline">HighChart Sparkline</a> |
     <a href="#/FusionChart">Fusion Chart</a> |
     <a href="#/CanvasJSChart">CanvasJS Chart</a> |
-    <a href="#/AMChart">AM Chart</a>
+    <a href="#/AMChart">AM Chart</a> |
+    <a href="#/BI/TopManagementDashboard">BI - TopManagementDashboard</a>
     <div class="col-md-12" ng-view></div>
 </body>
 
 @Scripts.Render("~/bundles/JQuery")
 @Scripts.Render("~/bundles/Angular")
 @Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/bundles/highchart")
 @*@Scripts.Render("~/bundles/Semantic")*@
 @Scripts.Render("~/bundles/Javascripts")
 </html>
