--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-chart.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-chart.html
@@ -1,2 +1,2 @@
-﻿<div ng-show="isLoading" style="z-index:100;position:absolute;">Retrieving Data and Loading Chart...</div>
+﻿<div ng-show="isLoading" style="z-index:100;position:absolute;color:gray;font-size:16px">Retrieving Data and Loading Chart...</div>
 <div id="divChart"  />
