--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -25,7 +25,8 @@
     <a href="#/FusionChart">Fusion Chart</a> |
     <a href="#/CanvasJSChart">CanvasJS Chart</a> |
     <a href="#/AMChart">AM Chart</a> |
-    <a href="#/BI/TopManagementDashboard">BI - TopManagementDashboard</a>
+    <a href="#/BI/TopManagementDashboard">BI - TopManagementDashboard</a> |
+    <a href="#/BI/SeniorManagementDashboard">BI - SeniorManagementDashboard</a>
     <div class="col-md-12" ng-view></div>
 </body>
 
