--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-menu.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-menu.html
@@ -1,5 +1,5 @@
 ﻿<div style="position:relative">
-    <div style="position:absolute;right:-10px;top:-16px;z-index:101">
+    <div style="position:absolute;right:-10px;top:-16px;">
 
         <div class="dropdown">
             <label id="dropdownMenuType" class="dropdown-toggle" style="padding-top:6px" data-toggle="dropdown" aria-expanded="true">
