--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -33,7 +33,7 @@
         <div class="col-lg-2">
             
             <vr-dropdown type="ondemand" options="testviewCtrl.optionsZone" datatextfield="Name" datavaluefield="ZoneId"
-                         onsearch="testviewCtrl.onsearch" entityname="Zone" onselectionchange="testviewCtrl.selectedvalues"></vr-dropdown>
+                         onsearch="testviewCtrl.onsearch" entityname="Zone"></vr-dropdown>
         </div>
         <div class="col-lg-2">
             <span >Selected Values : </span>
