--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
@@ -1,1 +1,43 @@
-﻿
+﻿<div class="modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header" ng-show="title">
+                <button type="button" class="close" aria-label="Close" ng-click="$hide()"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" ng-bind="title"></h4>
+            </div>
+
+            <div class="modal-body">
+                
+
+                    <div ng-controller="ZoneDetailsController">
+                        <h3>Zone Name: {{zoneName}}</h3>
+                        <select ng-options="itm as itm.name for itm in timeDimensionTypes"
+                                ng-model="selectedTimeDimensionType" ng-change="updateReport()"></select>
+                        <div style="height:400px;overflow:auto">
+                            <table >
+                                <thead>
+                                    <tr>
+                                        <th style="width:150px">Time</th>
+                                        <th style="width:150px" ng-repeat="header in columns"> {{header}}</th>
+                                    </tr>
+                                </thead>  
+                                 <tbody>
+                                     <tr ng-repeat="dataItem in data">
+                                         <td> {{dataItem.TimeGroupName}} - {{dataItem.TimeValue}}</td>
+                                         <td  ng-repeat="value in dataItem.Values">{{value | number:2}}</td>
+                                     </tr>
+                                 </tbody>
+                                   
+                            </table>
+                        </div>
+                    </div>
+
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
