--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
@@ -32,8 +32,9 @@
 
                 <div class="col-lg-2 style-col">
                     <div class="control-label">&nbsp;</div>
-                    <label class="control-label" style="padding-top:6px">Show Values with Legends:
+                    <label class="control-label" style="padding-top:6px">
                         <input type="checkbox" ng-model="showValuesOnLegends" ng-change="filterChanged()" />
+                        Show Values with Legends
                     </label>                    
                 </div>
             </div>
@@ -44,6 +45,15 @@
                     </div>
                     <div class="col-lg-5 style-col">
                         <vr-chart data-on-ready="chartZoneReady" style="display:inline-block"></vr-chart>
+                    </div>
+                    <div ng-show="isZoneVisible">
+                        <div ng-repeat="itm in optionsMeasureTypes.datasource">
+                            <label class="control-label" style="padding-top:6px">
+                                <input type="checkbox" ng-model="itm.selected" ng-change="updateZone()" />
+                                {{itm.Description}}
+                               
+                            </label>
+                        </div>
                     </div>
                 </div>
             <div class="row style-row">
