--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
     <a href="#/BI/ZoneDashboard">BI - Destination Dashboard</a>
     <div class="col-md-12" ng-view></div>
 </body>
-
+@Scripts.Render("~/bundles/helpers")
 @Scripts.Render("~/bundles/JQuery")
 @Scripts.Render("~/bundles/Angular")
 @Scripts.Render("~/bundles/bootstrap")
