--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="col-lg-2 style-col">
                     <label class="control-label">Measure:</label>
-                    <vr-dropdown datatextfield="Description" datavaluefield="Value"
+                    <vr-dropdown datatextfield="name" datavaluefield="value"
                                  entityname="" type="standard" options="optionsMeasureTypes" data-onselectionchange="updateCharts"></vr-dropdown>
                 </div>
                 <div class="col-lg-2 style-col">
