--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
@@ -1,44 +1,43 @@
-﻿
-<!--<div style="height:400px;overflow:auto;display:inline-block">
-    <table>
-        <thead>
-            <tr>
-                <th style="width:150px">Time</th>
-                <th style="width:150px" ng-repeat="header in columns"> {{header}}</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="dataItem in data">
-                <td> {{dataItem.TimeGroupName}} <span ng-hide="dataItem.TimeGroupName == null">-</span> {{dataItem.TimeValue}}</td>
-                <td ng-repeat="value in dataItem.Values">{{value | number:2}}</td>
-            </tr>
-        </tbody>
-
-    </table>
-</div>-->
-
-
-    <div class="panel panel-primary panel-over-color">
-        <div class="panel-body">
-            <div class="row style-row">
-                <div class="col-md-2 col-lg-2 style-col">
-                    <h4>Zone Name: {{zoneName}}</h4>
-                    <select ng-options="itm as itm.name for itm in timeDimensionTypes"
-                            ng-model="selectedTimeDimensionType" ng-change="updateReport()"></select>
-
-                </div>
+﻿<div class="panel panel-primary panel-over-color">
+    <div class="panel-body">
+        <div class="row style-row">
+            <div class="col-md-3 col-lg-3 style-col">
+                <h4>Zone Name: {{zoneName}}</h4>
+            </div>
                 
+        </div>
+        <div class="row style-row">
+
+            <div class="col-lg-1 style-col">
+                <label class="control-label">Grouped By:</label>
+                <vr-dropdown datatextfield="name" datavaluefield="value"
+                                entityname="" type="standard" options="timeDimensionTypesOption" onselectionchange="updateReport"></vr-dropdown>
+            </div>
+            <div class="col-lg-1 style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                <label class="control-label">From:</label>
+                <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                    <input size="10" class="form-control" ng-model="fromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-change="updateReport()">
+                </div>
             </div>
 
-            <div class="row style-row">
-                <div class="col-lg-12 col-md-12   style-col">
-                    <div id="custom" class="gridroute" ui-grid="gridOptionsZoneDetails" ></div>
+            <div class="col-lg-1  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                <label class="control-label">To:</label>
+                <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                    <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-change="updateReport()">
                 </div>
-               
             </div>
-            
+
         </div>
+
+        <div class="row style-row">
+            <div class="col-lg-12 col-md-12   style-col">
+                <div id="custom" class="gridroute" ui-grid="gridOptionsZoneDetails" style="height:600px"></div>
+            </div>
+               
+        </div>
+            
     </div>
+</div>
 
 
 
